# nova-agent

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUBAGENT_COMPARISON.md  SUBAGENT_DESIGN.md  config-full.yaml.example  config-minimal.yaml.example  config-safe.yaml.example  config.yaml.example  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: .nova.md.example  AGENTS.md.example  NOVA.md.example  SOUL.md.example
config/skills/code-review/: SKILL.md  skill.json
config/skills/documentation-template-builder/: SKILL.md  skill.json
config/skills/documentation-template-builder/references/: adr-example.md  competitive-analysis-example.md  deployment-example.md  gtm-plan-example.md  operational-example.md  persona-example.md  prd-example.md  readme-example.md  roadmap-example.md  (+3 more)
config/skills/file-editing/: SKILL.md  skill.json
config/skills/git-workflow/: SKILL.md  skill.json
config/skills/nova-debugging/: SKILL.md  skill.json
config/skills/nova-development/: SKILL.md  skill.json
config/skills/python-coding/: SKILL.md  skill.json
docs/: ADR-001-SUBAGENT_COMPARISON.md  ADR-002-SUBAGENT_DESIGN.md  ADR-003-TOOL_SYSTEM_REVIEW.md  DOCUMENTATION_INDEX.md  GUIDE-001-CREATING_TOOLS.md  GUIDE-002-CREATING_SKILLS.md  GUIDE-003-CUSTOMIZING.md  GUIDE-004-BACKGROUND_TASKS.md  GUIDE-005-COST_TRACKING.md  GUIDE-006-HOOKS.md  GUIDE-007-MCP_INTEGRATION.md  GUIDE-008-PERMISSIONS.md  GUIDE-009-USING_NOVA.md  GUIDE-010-ROADMAP.md  GUIDE-011-CONTEXT_COMPRESSION.md  GUIDE-012-SESSION_MANAGEMENT.md  GUIDE-013-MEMORY_SYSTEM.md  GUIDE-014-RETRY_AND_ERROR_HANDLING.md  PROJECT_REPORT_2026-05-02.md  REPORT-001-PROJECT_STATUS_2026-05-02.md  background-tasks.md  cost-tracking.md  creating-skills.md  creating-tools.md  customizing.md  hooks.md  mcp-integration.md  permissions.md
nova/: __init__.py  __main__.py  agent.py  cli.py  command_handlers.py  commands.py  compression.py  config.py  context.py  cost_tracker.py  display.py  hooks.py  mcp_client.py  memory.py  microcompact.py  model_metadata.py  permissions.py  prompt.py  retry.py  session.py  skills.py  tasks.py  tokens.py  wiki_memory.py
nova/tools/: delegate_tool.py  file_list.py  file_ops.py  git_tool.py  http_client.py  memory_tool.py  registry.py  search_files.py  search_sessions_tool.py  skills_tool.py  task_tools.py  terminal.py  web.py  wiki_tool.py
scripts/: install.sh
tests/: __init__.py  conftest.py  test_agent.py  test_agent_compression.py  test_agent_parallel.py  test_agent_streaming.py  test_agent_tokens.py  test_cli.py  test_command_handlers.py  test_commands.py  test_compression.py  test_config.py  test_context.py  test_cost_tracker.py  test_delegate.py  test_delegate_errors.py  test_display.py  test_file_list.py  test_file_ops.py  test_git_tool.py  test_hooks.py  test_http_client.py  test_mcp_client.py  test_memory.py  test_memory_tool.py  test_microcompact.py  test_model_metadata.py  test_permissions.py  test_prompt.py  test_registry.py  test_retry.py  test_search_sessions_tool.py  test_session.py  test_skills.py  test_skills_tool.py  test_task_tools.py  test_tasks.py  test_tokens.py  test_tools.py  test_wiki_memory.py  (+1 more)
